@@ -1,8 +1,10 @@
 \cdbalgorithm{unwrap}{}
 
 Move objects out of \subsprop{Derivative}s or \subsprop{Accent}s when
-they do not depend on these operators. Accents will get removed from
-objects which do not depend on them, as in the following example:
+they do not depend on these operators. 
+
+Accents will get removed from objects which do not depend on them, as
+in the following example:
 \begin{screen}{1,2,3,5,6,8}
 \hat{#}::Accent.
 \hat{#}::Distributable.
@@ -14,18 +16,24 @@ B::Depends(\hat).
 @unwrap!(%);
 A + \hat{B} + C;
 \end{screen}
+
 Derivatives will be set to zero if an object inside does not depend on
-it,
+it. All objects which are annihilated by the derivative operator are
+moved to the front (taking into account anti-commutativity if necessary),
 \begin{screen}{1,2,4,5}
 \partial{#}::PartialDerivative.
+{A,B,C,D}::AntiCommuting.
 x::Coordinate.
-B::Depends(\partial).
+{B,D}::Depends(\partial).
 
-\partial_{x}( A B C ):
+\partial_{x}( A B C D ):
 @unwrap!(%);
-A C \partial_{x}{B};
+- A C \partial_{x}{B D};
 \end{screen}
-Here is another example,
+Note that a product remains inside the derivative; to expand that
+use \subsalg{prodrule}. 
+
+Here is another example
 \begin{screen}{1,2,3,4,6}
 \del{#}::Derivative.
 X::Depends(\del).
@@ -35,6 +43,7 @@ X::Depends(\del).
 @unwrap!(%);
 \del{X}*Y*Z;
 \end{screen}
+
 Note that all objects are by default constants for the action of
 \subsprop{Derivative} operators. If you want objects to stay inside
 derivative operators you have to explicitly declare that they depend
@@ -44,3 +53,4 @@ you take a derivative.
 \cdbseeprop{Accent}
 \cdbseeprop{Derivative}
 \cdbseeprop{PartialDerivative}
+\cdbseealgo{prodrule}
